# ocaml-scid

./: .gitignore  .merlin  .ocp-indent  Makefile  _oasis  _tags  build  myocamlbuild.ml  opam  scid.opam  setup.ml
doc/: dev.odocl
lib/: META  scid.ml  scid.mli  scid.mllib  types.ml
lib_test/: browser.ml  copy.ml  streaming.ml  suite.ml  test_decoder.ml
pkg/: META  build.ml  pkg.ml
src/: dune  jbuild  scid.ml  scid.mli  scid.mllib
test/: browser.ml  copy.ml  dune  jbuild  suite.ml  tests.itarget
