opam-version: "2.0"
name: "scid"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
authors: ["Vincent Bernardoff <vb@luminar.eu.org>"]
homepage: "https://github.com/vbmithr/scid"
doc: "https://vbmithr.github.io/scid/doc"
license: "ISC"
dev-repo: "git+https://github.com/vbmithr/scid.git"
bug-reports: "https://github.com/vbmithr/scid/issues"
tags: []
depends: [
  "ocaml" {>= "4.02.0"}
  "dune" {build & >= "1.0"}
  "ounit" {test}
  "result"
  "ocplib-endian" {>= "1.0"}
]
depopts: []
build:[ "dune" "build" "-p" name "-j" jobs ]
